--- a/app/src/main/res/layout/activity_list_items.xml
+++ b/app/src/main/res/layout/activity_list_items.xml
@@ -26,13 +26,15 @@
         android:layout_row="0"
         android:layout_columnWeight="1"
         android:gravity="fill"
-        android:text="CheckBox" />
+        android:text="CheckBox"
+        />
     <Switch
         android:layout_column="0"
         android:layout_row="1"
         android:layout_columnWeight="1"
         android:gravity="fill"
-        android:text="What does this do?"/>
+        android:text="What does this do?"
+        android:id="@+id/switchButton"/>
 
     <ImageButton
         android:id="@+id/imageButton"
