--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="fragmentBackground">#AAAAAA</color>
+    <color name="black">#ffffff</color>
+    <color name="foreground_material_light">#ffffff</color>
 </resources>
