--- a/app/src/main/res/layout/activity_test_toolbar.xml
+++ b/app/src/main/res/layout/activity_test_toolbar.xml
@@ -9,12 +9,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/lab8_toolbar"></android.support.v7.widget.Toolbar>
+    <android.support.v4.widget.DrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/lab8_toolbar"
+        android:id="@+id/drawer_layout">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:text="Start Snackbar"
+                android:id="@+id/startSnackbar"></Button>
+        </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="Start Snackbar"
-        android:id="@+id/startSnackbar"></Button>
+        <android.support.design.widget.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+
+            android:fitsSystemWindows="true"
+            android:layout_gravity="start"
+
+            android:id="@+id/navigation_view"
+
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/nav_menu"></android.support.design.widget.NavigationView>
+
+    </android.support.v4.widget.DrawerLayout>
+
+
 </RelativeLayout>
